src/layouts/Shell.css
:root {
  --color-primary: #058e84;
  --color-secondary: #fe7e40;
  --color-white-92: hsl(from var(--color-white) h s calc(l * 0.92));
  --color-white-97: hsl(from var(--color-white) h s calc(l * 0.97));
  --color-white: #f9f9f9;
  --color-black: #333333;

  --size-font-quot: 3rem;
  --size-font-huge: 1.5rem;
  --size-font-large: 1.25rem;
  --size-font: 16px;
  --size-font-small: 0.875rem;
  --size-font-tiny: 0.75rem;
  --size-aside-width: 25rem;
  --size-header-height: 5rem;
  --size-page-padding: 20%;
  --size-page-padding-breakout: -20%;
  --size-gap-tiny: 0.25rem;
  --size-gap-huge: 4rem;
  --size-gap-large: 2rem;
  --size-gap: 1rem;
  --size-gap-small: 0.5rem;
  --size-gap-medium: 1rem;
  --size-burger: 2rem;
  --size-border-radius-large: 2rem;
  --size-border-radius: 1rem;
  --size-border-radius-small: 0.5rem;
  --size-line-height-quot: 1.6;

  --transition-slow: 0.7s ease-in-out;

  --border-massive: 1rem solid rgb(from var(--color-white) r g b / 0.8);
}

html {
  display: flex;
  flex-direction: column;
  scroll-snap-type: y proximity;
  scroll-behavior: smooth;
  hyphens: auto;
}

html,
body {
  margin: 0;
  font-family: "Nunito Variable", sans-serif;
  font-size: var(--size-font);
  color: var(--color-black);
  background-color: var(--color-white);
}

body {
  display: grid;
  min-height: 100vh;
  grid-template-columns: var(--size-aside-width) 1fr;
  grid-template-rows: 1fr auto;
  grid-template-areas:
    "header main"
    "footer main";
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-block-start: 2em;
  font-family: "Montserrat Variable", sans-serif;
}

body > main > * {
  padding: 0 var(--size-page-padding);
}

body > :is(header, footer) {
  position: sticky;
  top: 0;
  bottom: 0;
  gap: var(--size-gap);
  padding: var(--size-gap);
  background-color: var(--color-white-97);
  border-inline-end: var(--border-massive);
}

body > header {
  grid-area: header;
  height: 95vh;
  display: grid;
  grid-template-rows: min-content;
  grid-template-areas:
    "brand"
    "nav";

  > .burger {
    display: none;
    grid-area: burger;
  }

  > nav {
    grid-area: nav;

    ul {
      display: flex;
      flex-direction: column;
      gap: var(--size-gap-small);
    }

    a {
      display: inline-block;
      width: 100%;
      padding: var(--size-gap) 0;
      font-size: var(--size-font-large);
      font-weight: bold;
      text-align: center;

      &:hover {
        background-color: var(--color-white);
        border-radius: var(--size-border-radius-large);
      }

      &.active {
        background-color: var(--color-white);
        border-radius: var(--size-border-radius-large);
      }
    }
  }

  > .brand {
    display: flex;
    grid-area: brand;
    height: var(--size-header-height);
    max-height: 5rem;

    svg {
      width: 100%;
      height: auto;
    }
  }
}

body > main {
  grid-area: main;
}

body > footer {
  grid-area: footer;
  display: flex;
  flex-direction: column;

  > .contact {
    text-align: center;
    font-size: var(--size-font-large);
  }

  > .settings {
    display: flex;
    justify-content: center;
  }

  > .legal-nav {
    font-size: var(--size-font-tiny);
    text-align: center;

    ul li {
      display: inline;

      &:not(:last-child)::after {
        content: "·";
        padding: 0 var(--size-gap-tiny);
      }
    }
  }

  > .copyright {
    font-size: var(--size-font-tiny);
    list-style: none;
    margin: 0;
    padding: 0;
    text-align: center;
  }

  select {
    background: transparent;
    border: none;
    margin: 0;
    padding: 0;
  }
}

nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
  color: var(--color-primary);
}

table {
  background-color: var(--color-white-97);
  border-collapse: collapse;
}

th {
  background-color: var(--color-white);
  border: 1px solid var(--color-white-92);
  position: sticky;
  top: 0;
}

tr:hover {
  background-color: var(--color-white);
}

td {
  border: 1px solid var(--color-white-92);
}

td,
th {
  padding: var(--size-gap-small);
}

.padding-breakout {
  margin: 0 var(--size-page-padding-breakout);
}

.disable-main-margin main {
  margin: 0;
}

.scroll-snapping-block :is(main > section, header, footer) {
  scroll-snap-align: start;
}

.centered {
  display: flex;
  justify-content: center;
}

.tab {
  border-color: var(--color-white-92) !important;
  white-space: nowrap;
}

.tab[aria-selected='true'],
.tab:hover,
.tab:focus-visible {
  box-shadow: none;
  background-color: var(--color-primary);
}

.tab-panel {
  border-color: var(--color-white-92) !important;
  height: auto;
}

.panel-content {
  max-width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: var(--size-gap-large);
}

.panel-content img {
  max-width: 80%;
  height: auto;
  display: block;
}

.feature1 {
  grid-column: 1 / span 2;
  grid-row: 1;
}

.feature2 {
  grid-column: 1;
  grid-row: 2 /span 2;
}

.feature3 {
  grid-column: 2;
  grid-row: 2;
}

.feature4 {
  grid-column: 2;
  grid-row: 3;
}

.feature5 {
  grid-column: 1 / span 2;
  grid-row: 4;
}

.feature6 {
  grid-column: 1;
  grid-row: 5;
}

.feature7 {
  grid-column: 2;
  grid-row: 5;
}

@media (max-width: 1280px) {
  html {
    scroll-snap-type: none;
  }

  body {
    height: 100%;
    grid-template-columns: 1fr;
    grid-template-rows: auto 1fr auto;
    grid-template-areas:
      "header"
      "main"
      "footer";
  }

  body > main {
    margin-block: var(--size-gap-large);
    overflow: visible;
  }

  body > :is(header, footer) {
    position: relative;
    border-inline-end: none;
  }

  body > header {
    height: auto;
    flex-direction: row;
    align-items: center;
    grid-template-columns: 1fr auto;
    grid-template-areas: "brand burger";
    gap: var(--size-gap-large);

    .brand {
      justify-self: center;
      margin-left: var(--size-burger);
      max-height: 3rem;
    }

    .burger {
      display: block;
    }

    nav {
      display: none;
    }
  }

  body.burger-active {
    grid-template-rows: 1fr auto;
    grid-template-areas:
      "header"
      "footer";
  }

  body.burger-active > main {
    display: none;
  }

  body.burger-active > header {
    grid-template-rows: min-content min-content;
    grid-template-areas:
      "brand burger"
      "nav nav";

    nav {
      display: block;
    }
  }
}

@media (min-width: 1601px) {
  :root {
    --size-font: 18px;
  }
}

@media (max-width: 1600px) {
  :root {
    --size-font: 16px;
    --size-page-padding: 10%;
    --size-page-padding-breakout: 0;
  }
}

@media (max-width: 1200px) {
  :root {
    --size-font: 14px;
    --size-page-padding: 1rem;
  }
}

@media (max-width: 800px) {
  .tab {
    margin: 0;
    padding: var(--size-gap-small);
  }
  .panel-content {
    max-width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .panel-content img {
    max-width: 16rem;
    height: auto;
  }
}

